css/style_main.css
/*
	MAIN CSS STYLE SHEET
	BASIC
	  -Structures
	  -Wrappers
	  -Buttons
     GRAPHICS
	  -Images
	  -Videos
 */
    /***********/
  /* STRUCTURES */
    /***********/

       body {
          line-height: 1;
          -ms-overflow-style: scrollbar;
          background: #21252F;
          font-family: 'Barlow', sans-serif;
        }
        html {
          box-sizing: border-box;
        }
        div.intro {
            height: 80vh;
        }
        section {
            padding: 3vh;
        }
        section.intro{
            padding: 0;
        }
        section.wrapper.yellow {
            background:rgba(255, 255, 102, 0.9);
            padding-top: 0;
        }
        section.wrapper.yellow.mid {
           /* background:rgba(255, 255, 102, 0.9);*/
            background: #21252F;
            padding-top: 5vh;
        }
        div.padded {
            padding: 3vh;
        }
        div.padded.light{
            padding: 1vh;
        }
        /* Wrapper (yellow) */

        .wrapper.yellow > .inner {
            padding: 5rem 3.5rem 5rem 3.5rem ;
            margin: 0 auto;
            max-width: 100%;
            width: 64rem;
        }

        /* Wrapper (mid) */

        .wrapper.yellow.mid > .inner {
            padding: 5rem 3.5rem 5rem 3.5rem ;
            margin: 0 auto;
            max-width: 100%;
            width: 63rem;
        }
        span {
            padding: 0;
        }
    /***********/
    /* TYPES */
    /***********/

        html {
            font-size: 18pt;
        }
        body {
            font-family: 'Barlow', sans-serif;
            font-size: 1rem;
            font-weight: 300;
            line-height: 1.65;
        }
        h1, h2, h3, h4, h5, h6{
            font-weight: 300;
            line-height: 1.375;
            letter-spacing: -0.05em;
            margin: 0 0 1rem 0;
            color: rgba(255, 255, 255, 0.75);
        }

        h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
            color: inherit;
            text-decoration: none;
        }

        h1 {
            font-size: 3.5rem;
            line-height: 1.2;
            color: rgba(255, 255, 102, 1);
            }
            h1.intro {
                letter-spacing: 0.05em;
                font-weight: 700;
            }
            h1.invert {
                font-size: 3.5rem;
                line-height: 1.2;
                color: rgba(33,37,47, 1);
            }
            h1.intro.invert {
                font-weight: 700;
                letter-spacing: -0.05em;
            }

        h2 {
            font-size: 2rem;
        }
            h2.sub {
                font-size: 2.25rem;
                color: rgba(255, 255, 102, 1);
                font-weight: 700;
            }
            h2.invert {
                font-size: 2.25rem;
                color: rgba(33,37,47, 1);
            }
            h2.sub.invert {
                font-size: 2.25rem;
                color: rgba(33,37,47, 1);
                font-weight: 700;
            }

        h3 {
            font-size: 1.5rem;
             }
            h3.strong{
                font-size: 1.5rem;
                color: rgba(255, 255, 102, 1);
            }
            h3.footer{
                font-size: 1.5rem;
                color: rgba(255, 255, 255, 0.75);
                font-weight: 700;
            }

        h4 {
            font-size: 1.1rem;
            font-weight: 500;
        }
            h4.sub {
                font-weight: 500;
                text-align: left;
            }

        h5 {
            font-size: 0.9rem;
        }
            h5.invert {
                color: rgba(33,37,47, 1);
            }
            h5.sub {
                text-align: left;
            }

        h6 {
            border-color: rgba(255, 255, 255, 0.5);
        }

            h6.about {
                font-size: 0.7rem;
            }


        p {
            margin: 0 0 0rem 0;
            color: rgba(255, 255, 255, 0.75);
        }
            p.major {
                font-size: 1.25rem;
            }
            p.invert {
                margin: 0 0 2rem 0;
                color: rgba(33,37,47, 1);
            }
            p.major.invert {
                font-size: 1.25rem;
            }
            .key {
                font-weight: 500;
                line-height: 1.375;
                letter-spacing: -0.05em;
                color: rgba(255, 255, 255, 0.75);
                font-size: 0.7rem;
                margin-block-end: 0;
            }
            .keymain {
            font-weight: 300;
            line-height: 1.375;
            letter-spacing: -0.05em;
            color: rgba(255, 255, 255, 0.75);
            font-size: 0.9rem;
            margin-block-end: 0;
                    }
        sup {
            font-size: 0.8rem;
            position: relative;
            top: -0.5rem;
        }

        hr {
            border: 0;
            border-bottom: solid 1px;
            margin: 2.5rem 0;
            border-bottom-color:rgba(255, 255, 255, 1);
        }

        hr.major {
            margin: 3.5rem 0;
        }

        .align-left {
            text-align: left;
        }

        .align-center {
            text-align: center;
        }

        .align-right {
            text-align: right;
        }
        blockquote {
            border-left-color: rgba(255, 255, 255, 1);
        }


    /***********/
    /* BUTTONS */
    /***********/
    .about {
        color: rgba(255, 255, 255, 0.5);
        background-color: transparent;
        background-image: none;
        border-color: rgba(255, 255, 255, 0.5);
        font-weight: 400;
        font-size: .7rem;
        justify-content: left;

    }

.btn-warning {
    color: rgba(33,37,47, 1);
    background-color: rgba(255, 255, 102, 1);
    background-image: none;
    font-weight: 400;
    font-size: 1rem;
    justify-content: left;

}
.btn-warning:hover {
    color:rgba(33,37,47, 1);
    background-color:rgba(145,196,196, 1);
    border-color:rgba(255, 255, 102, 1)}

.btn-warning.focus,.btn-warning:focus {
    box-shadow:0 0 0 .2rem rgba(255, 255, 102, .5)}
.btn-warning.disabled,.btn-warning:disabled{
    background-color:rgba(255, 255, 102, 1);border-color:rgba(255, 255, 102, 1)}
btn-warning.dropdown-toggle{
    color:#111;
    background-color:rgba(255, 255, 102, 1);
    border-color:rgba(255, 255, 102, 1);
    box-shadow:0 0 0 .2rem rgba(255, 255, 102, .5)}

h7 {
    font-weight: 300;
    line-height: 1.375;
    letter-spacing: -0.05em;
    margin: 0 0 0 0;
    color: rgba(255, 255, 255, 0.75);
    font-size: 20px;
}

.brushArea{
    height: 20vh;
}


.brush .extent {
    stroke: #fff;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

